# codeforces

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
dev/: 1136D.cpp  1251C.cpp  1271A.cpp  165C.cpp  2B.cpp  803C.cpp  977C.cpp  CMakeLists.txt
problemset/: 1139A.cpp  1A.cpp  1B.cpp  20A.cpp  339A.cpp  792C.cpp  797B.cpp  CMakeLists.txt  Makefile
problemset/A/: 1110A.cpp  1117A.cpp  1130A.cpp  1136A.cpp  1139A.cpp  1141A.cpp  118A.cpp  1217A.cpp  1221A.cpp  1249A.cpp  1369A.cpp  1A.cpp  20A.cpp  236A.cpp  2A.cpp  339A.cpp  41A.cpp  486A.cpp  572A.cpp  59A.cpp  609A.cpp  977A.cpp
problemset/B/: 1100B.cpp  1108B.cpp  1132B.cpp  1136B.cpp  1140B.cpp  1215B.cpp  1217B.cpp  1369B.cpp  1B.cpp  797B.cpp  977B.cpp
problemset/C/: 1136C.cpp  1249C.cpp  165C.cpp  3C.cpp  792C.cpp  803C.cpp  977C.cpp
problemset/D/: 1136D.cpp
tle/: 165C.cpp  803C.cpp
